Commit #76: Removing hard-coded data from canvasTileData page variable

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -347,43 +347,7 @@
 
     var currentDate;
 
-    var canvasTileData = [
-      {
-          "canvasTileId": "wakeup",
-          "tileMainText": "Wake Up",
-          "tileSubText": "6:00 am"
-      },
-      {
-          "canvasTileId": "toilet",
-          "tileMainText": "Toilet",
-          "tileSubText": "6:05 am"
-      },
-      {
-          "canvasTileId": "brushTeeth",
-          "tileMainText": "Brush Teeth",
-          "tileSubText": "6:15 am"
-      },
-      {
-          "canvasTileId": "meditate",
-          "tileMainText": "Meditate",
-          "tileSubText": "6:30 am"
-      },
-      {
-          "canvasTileId": "bath",
-          "tileMainText": "Bath",
-          "tileSubText": "6:45 am"
-      },
-      {
-          "canvasTileId": "breakfast",
-          "tileMainText": "Breakfast",
-          "tileSubText": "7:30 am"
-      },
-      {
-          "canvasTileId": "sleep",
-          "tileMainText": "Sleep",
-          "tileSubText": "10:30 pm"
-      }
-    ];
+    var canvasTileData = [];
 
     /* Page specific funtions related to Canvas Rendering */
 
