Commit #78: Fix the background-image tag in css for prev and next arrow icons

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -17,14 +17,14 @@
     }
 
     .previousArrow{
-        background-image url('/static/activities/left-arrow.png');
+        background-image: url('/static/activities/left-arrow.png');
         width: 66px;
         height: 66px;
         background-position: 1px 5px;
     }
 
     .nextArrow{
-        background-image url('/static/activities/right-arrow.png');
+        background-image: url('/static/activities/right-arrow.png');
         width: 66px;
         height: 66px;
         background-position: 1px 5px;
