Commit #79: Fix the missing <div> tag

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -277,6 +277,7 @@
 <div class="row dashboard-section">
   <hr>
 </div>
+<div>
     <div class="row dashboard-section">
         <div id="nav-tiles" class="dashboard-nav-button">
             <h5 class="dashboard-nav-button-text">Tiles</h5>
