Commit #80: Replace the outer-most divs with container class

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -269,15 +269,15 @@
 <div class="container" ng-app="digitalDiary">
     <h4> Dashboard </h4>
 </div>
-<div class="row dashboard-section">
+<div class="container">
     <div class="dashboardHeaderArrow previousArrow"></div>
     <div id="dashboardCurrentDate"></div>
     <div class="dashboardHeaderArrow nextArrow"></div>
 </div>
-<div class="row dashboard-section">
+<div class="container">
   <hr>
 </div>
-<div>
+<div class="container">
     <div class="row dashboard-section">
         <div id="nav-tiles" class="dashboard-nav-button">
             <h5 class="dashboard-nav-button-text">Tiles</h5>
