Commit #82: Fix CSS for Dashboard Date Arrows

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -14,24 +14,22 @@
 
     #dashboardCurrentDate{
         font-size: 24px;
+        float: left;
     }
 
     .previousArrow{
         background-image: url('/static/activities/left-arrow.png');
-        width: 66px;
-        height: 66px;
-        background-position: 1px 5px;
     }
 
     .nextArrow{
         background-image: url('/static/activities/right-arrow.png');
-        width: 66px;
-        height: 66px;
-        background-position: 1px 5px;
     }
 
     .dashboardHeaderArrow{
         float: left;
+        width: 16px;
+        height: 16px;
+        transform: scale(1.1);
     }
 
     #canvas-wrap {
