Commit #83: Replace Arrows with new set of arrows - unselected, hover and clicked icons

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -18,11 +18,12 @@
     }
 
     .previousArrow{
-        background-image: url('/static/activities/left-arrow.png');
+        background-image: url('/static/activities/arrow.png');
     }
 
     .nextArrow{
-        background-image: url('/static/activities/right-arrow.png');
+        background-image: url('/static/activities/arrow.png');
+        transform: rotate(180deg);
     }
 
     .dashboardHeaderArrow{
