Commit #87: Fix saveCanvasTileDataForGivenDate() method call from saveCanvasTileDataForGivenDate()

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -454,7 +454,7 @@
     var updateCurrentDateOnDashboardHeader = function (currentDate) {
 
         /* Save the Canvas Tile Data for the given date */
-        var saveCanvasTileDataForGivenDate(currentDate, canvasTileData);
+        saveCanvasTileDataForGivenDate(currentDate, canvasTileData);
 
         /* Format current date in DD MMM YYYY Format */
         currentDateInDDMMMYYYYFormat = formatDateInDDMMMYYYYFormat(currentDate);
