--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -425,6 +425,9 @@
         /* Save the Canvas Tile Data for the given date */
         saveCanvasTileDataForGivenDate(currentDate, canvasTileData);
 
+        /* Clear out the existing canvasTileData */
+        clearOutCanvasTileData();
+
         /* Subtract one day from the current date */
         var numberOfDaysToSubtract = 1;
         currentDate.setDate(currentDate.getDate() - numberOfDaysToSubtract);
@@ -439,6 +442,9 @@
         /* Save the Canvas Tile Data for the given date */
         saveCanvasTileDataForGivenDate(currentDate, canvasTileData);
 
+        /* Clear out the existing canvasTileData */
+        clearOutCanvasTileData();
+
         /* Add one day to the current date */
         var numberOfDaysToAdd = 1;
         currentDate.setDate(currentDate.getDate() + numberOfDaysToAdd);
@@ -446,6 +452,11 @@
         /* Update the Dashboard Date and Canvas Tiles for new current Date */
         updateDashboardDateAndCanvasTilesForGivenDate(currentDate);
     });
+
+    /* Clear out the existing canvasTileData */
+    var clearOutCanvasTileData = function () {
+        canvasTileData = [];
+    }
 
     /* Initialize the chat window */
     var initializeChatWindow = function () {
