Commit #92: Clear the tile divs from the Canvas Wrapper div

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -455,7 +455,10 @@
 
     /* Clear out the existing canvasTileData */
     var clearOutCanvasTileData = function () {
+        /* Clear the Canvas Tile Data */
         canvasTileData = [];
+        /* Remove activity tiles from the Canvas Wrap Div */
+        $("#canvas-wrap .tile").remove()
     }
 
     /* Initialize the chat window */
