--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -6,8 +6,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>-->
-  <script src="https://raw.githubusercontent.com/lrsjng/jquery-fracs/master/dist/jquery.fracs.js"></script>
-  <script src="https://raw.githubusercontent.com/lrsjng/jquery-fracs/master/dist/jquery.outline.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-fracs/0.15.1/jquery.fracs.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-fracs/0.15.1/jquery.outline.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.5.0/annyang.min.js"></script>
   <script src="https://www.jsviews.com/download/jsrender.js"></script>
 
