--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -78,9 +78,11 @@
         position: absolute;
         height: 120px;
         width: 210px;
-        background: #825b5b;
+        /*background: #825b5b;*/
         margin-top: 270px;
         margin-left: 30px;
+        border: 1px solid #333;
+        cursor: pointer;
     }
 
     #detailsSection{
@@ -437,7 +439,7 @@
         $('#mini-map').fracs('outline', {
             crop: true,
             styles: [{
-                selector: '.small-box',
+                selector: '.tile',
                 strokeWidth: 'auto',
                 strokeStyle: 'auto',
                 fillStyle: 'auto'
