Commit #96: Change the viewport color to yellow + remove viewport element

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -445,12 +445,13 @@
                 fillStyle: 'auto'
             }],
             viewportStyle: {
-                fillStyle: 'rgba(29,119,194,0.3)'
+                fillStyle: 'rgba(255,255,0,0.3)'
             },
             viewportDragStyle: {
-                fillStyle: 'rgba(29,119,194,0.4)'
+                fillStyle: 'rgba(255,255,0,0.4)'
             }
-        }, $('#canvas-wrap'));
+            //}, $('#canvas-wrap'));
+        })
     }
 
     /* Click Handler for Previous Date Arrow */
