Commit #97: Uncomment viewport fragment from fracs method call

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -447,8 +447,8 @@
             viewportDragStyle: {
                 fillStyle: 'rgba(255,255,0,0.4)'
             }
-            //}, $('#canvas-wrap'));
-        })
+            }, $('#canvas-wrap'));
+        //});
     }
 
     /* Click Handler for Previous Date Arrow */
