Commit #98: Make the "row dashboard" section consistent throughout the html Dashboard html elements

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -300,16 +300,17 @@
 
 
 </style>
-<div class="container" ng-app="digitalDiary">
-    <h4> Dashboard </h4>
+<div class="container">
+    <div class="row dashboard-section">
+        <div id="previousDateArrow" class="dashboardHeaderArrow previousArrow"></div>
+        <div id="dashboardCurrentDate"></div>
+        <div id="nextDateArrow" class="dashboardHeaderArrow nextArrow"></div>
+    </div>
 </div>
 <div class="container">
-    <div id="previousDateArrow" class="dashboardHeaderArrow previousArrow"></div>
-    <div id="dashboardCurrentDate"></div>
-    <div id="nextDateArrow" class="dashboardHeaderArrow nextArrow"></div>
-</div>
-<div class="container">
-  <hr>
+    <div class="row dashboard-section">
+        <hr>
+    </div>
 </div>
 <div class="container">
     <div class="row dashboard-section">
