--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -104,6 +104,7 @@
         margin-top: 20px;
         margin-left: 20px;
         font-size: 18px;
+        height: 242px;
     }
 
     .detailsSectionConversation{
@@ -116,7 +117,6 @@
         width: 290px;
         height: 105px;
         background-color: chartreuse;
-        margin-top: 280px;
     }
 
     #chatWindowStrip{
@@ -124,7 +124,7 @@
         width: 290px;
         height: 27px;
         background-color: chartreuse;
-        margin-top: 385px;
+        margin-top: 105px;
     }
 
     #chatWindowTextArea{
