Commit #105: Add the Details Section Heading during the Agent Welcome Message

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -501,6 +501,8 @@
         });
 
         /* Welcome the user */
+        $("#detailsSectionHeading").text("Digital Diary Agent Chat Interface");
+
         textToDisplay = "Agent" + ": " + "Welcome to the Digital Diary Agent Chat Interface";
         addConversationToDetailsSection(textToDisplay);
 
